# masters_second_semester_methods_and_technologies_of_parallel_programming

lab1/: .clangd  .gitignore  .~lock.Панченко_Сергій_ІП_51_мн_1.odt#  count_words.cpp  count_words_multi.csv  count_words_single.csv  factorization.cpp  gen_dir.cpp  main.cpp  main.d  main.py  main.typ  matrix_transpose.cpp  matrix_transpose_block.csv  matrix_transpose_multi.csv  matrix_transpose_single.csv  nob.cpp  pi_monte.cpp  pi_monte_multi.csv  pi_monte_single.csv  plots.ipynb  prime_slice.cpp  prime_slice_multi.csv  prime_slice_single.csv  report.typ  std_includes.hpp  Лабораторна робота №1 МТПП 2026.docx  Панченко_Сергій_ІП_51_мн_1.odt
lab2/: .gitignore  .~lock.Лабораторна робота №2 МТПП 2026.docx#  Cargo.toml  html.csv  image_processing.csv  matrix.csv  numbers.csv  plot.py  report.typ  Лабораторна робота №2 МТПП 2026.docx
lab3/: aux_process.py  report.typ  Лабораторна робота №3 МТПП 2026.docx
pr1/: Cargo.toml  pr1.txt  pr1_eng.txt  report.typ  rust-toolchain.toml  rustfmt.toml  task.txt
pr1/glfw-sys/: Cargo.toml  build.rs
pr1/linux/: Cargo.toml  build.rs  linux.h
pr1/linux/src/: lib.rs
pr1/my/: Cargo.toml  build.rs
pr1/my_shaders/: Cargo.toml
pr1/my_shaders/src/: lib.rs
pr1/vk/: Cargo.toml  bindings.h  build.rs
pr1/vk/cimgui/: cimgui.cpp  cimgui.h
pr1/vk/cimplot/: cimplot.cpp  cimplot.h
pr1/vk/src/: lib.rs
pr2/: .gitignore  Cargo.toml  pr2.txt  pr2_eng.txt  report.typ
