[package]
name = "my"
version = "0.1.0"
edition = "2024"

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev="30896871ba00e668029ccb724f1438202b284708"}

[dependencies]
vk = {path="../vk"}
linux = {path="../linux"}
my_shaders = {path="../my_shaders"}
paste = "1.0"

libc = "0.2"
rtsparse = "1.0.0"
nix = {version="0.31.2", features = ["fs", "mman", "event", "user", "ioctl", "time"]}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
serde_json = "1.0"
